spacing fixed on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -17,26 +17,22 @@
   color: #61dafb;
 }
 
-div.carbonWrapper {
-  padding: 15px;
-  height: 100px;
-  /* width: 30%; */
-  border-bottom: 1px solid #a7a4a4;
-  background-color: rgb(248, 248, 248);
-  display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-}
+/* cards */
 
 .card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin: 0;
+  margin: 10px;
 }
+
+.red-text {
+  color: rgb(97, 24, 24);
+}
+
+/* ppm blurb */
 
 p {
   display: flex;
@@ -57,6 +53,17 @@ p {
   line-height: 30px;
 }
 
+div.carbonWrapper {
+  padding: 15px;
+  height: 100px;
+  border-bottom: 1px solid #a7a4a4;
+  background-color: rgb(248, 248, 248);
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
 .footer {
   font-size: 17px;
   font-family: 'Chronicle Text G2 A', 'Chronicle Text G2 B', 'Chronicle Text G2', Georgia, serif;
@@ -66,20 +73,14 @@ p {
   line-height: 30px;
 }
 
-.red-text {
-  color: rgb(97, 24, 24);
-}
+
 
 /* mobile */
 
 @media (max-width: 600px) {
   div.carbonWrapper {
-    height: 250px;
+    height: 200px;
   }
 }
 
-@media (max-width: 600px) {
-  .card {
-    padding-bottom: 20px;
-  }
-}
+
